WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182013
Rollout
r227216
as it seems to be causing deadlocks
https://bugs.webkit.org/show_bug.cgi?id=182013
Summary
Rollout r227216 as it seems to be causing deadlocks
Chris Dumez
Reported
2018-01-23 14:29:26 PST
Rollout
r227216
as it seems to be causing deadlocks.
Attachments
Patch
(20.66 KB, patch)
2018-01-23 14:30 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-01-23 14:30:46 PST
Created
attachment 332077
[details]
Patch
Chris Dumez
Comment 2
2018-01-23 15:15:45 PST
Comment on
attachment 332077
[details]
Patch Clearing flags on attachment: 332077 Committed
r227452
: <
https://trac.webkit.org/changeset/227452
>
Chris Dumez
Comment 3
2018-01-23 15:15:46 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-01-23 15:16:46 PST
<
rdar://problem/36796495
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug