Source/WebCore/page/ChromeClient.h
@@ -474,8 +474,6 @@ public:
     virtual void didInsertMenuItemElement(HTMLMenuItemElement&) { }
     virtual void didRemoveMenuItemElement(HTMLMenuItemElement&) { }
 
-    virtual void testIncomingSyncIPCMessageWhileWaitingForSyncReply() { }
-
 protected:
     virtual ~ChromeClient() = default;
 };
